<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".placar">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_aumentartime_a"
        style="@style/button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:text="@string/btn_aumentartime_a"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/tv_time_a_pontos"
        app:layout_constraintStart_toStartOf="@id/tv_time_a_pontos" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_diminuirtime_a"
        style="@style/button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="15dp"
        android:text="@string/btn_diminuirtime_a"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_aumentartime_a"
        app:layout_constraintEnd_toEndOf="@id/tv_time_a_pontos"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_aumentartime_b"
        style="@style/button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="345dp"
        android:text="@string/btn_aumentartime_b"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@id/tv_time_b_pontos"
        app:layout_constraintTop_toBottomOf="@id/tv_time_b_pontos"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_diminuirtime_b"
        style="@style/button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="15dp"
        android:text="@string/btn_diminuirtime_b"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_aumentartime_b"
        app:layout_constraintStart_toEndOf="@id/btn_aumentartime_b"
        app:layout_constraintEnd_toEndOf="@id/tv_time_b_pontos"
        />

    <EditText
        android:id="@+id/edt_time_a"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:background="@color/black"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintVertical_bias="0.05"/>

    <EditText
        android:id="@+id/edt_time_b"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:hint="@string/time_bnome"
        android:textAlignment="center"
        android:background="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintVertical_bias="0.05"/>

    <TextView
        android:id="@+id/tv_time_a_pontos"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/tv_time_a_pontos"
        android:gravity="center"
        android:background="@color/black"
        android:textColor="@color/white"
        android:textSize="90sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/edt_time_a"
        app:layout_constraintStart_toStartOf="@id/edt_time_a"
        app:layout_constraintEnd_toEndOf="@id/edt_time_a" />

    <TextView
        android:id="@+id/tv_time_b_pontos"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/tv_time_b_pontos"
        android:gravity="center"
        android:background="@color/black"
        android:textColor="@color/white"
        android:textSize="90sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/edt_time_b"
        app:layout_constraintStart_toStartOf="@id/edt_time_b"
        app:layout_constraintEnd_toEndOf="@id/edt_time_b" />

    <TextView
        android:id="@+id/rodada"
        android:layout_width="120dp"
        android:layout_height="130dp"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/tv_valor_rodada"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo_rodada" />

    <TextView
        android:id="@+id/tv_titulo_rodada"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/tv_titulo_rodada"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/btn_aumentartime_a"
        app:layout_constraintBottom_toTopOf="@+id/rodada"
        app:layout_constraintEnd_toEndOf="@+id/rodada"
        app:layout_constraintStart_toStartOf="@+id/rodada" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/rodada_up_button"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:background="@drawable/arrow_drop_up_10"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@id/rodada"
        app:layout_constraintTop_toTopOf="@id/rodada"
        app:layout_constraintEnd_toEndOf="@id/rodada"
       />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/rodada_down_button"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:background="@drawable/arrow_drop_down_10"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@id/rodada"
        app:layout_constraintStart_toStartOf="@id/rodada"
        app:layout_constraintBottom_toBottomOf="@id/rodada"/>

    <TextView
        android:id="@+id/timer_text_view"
        style="@style/textview_itens"
        android:background="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_text_view"
        android:textSize="18sp"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/rodada"
        app:layout_constraintStart_toStartOf="@id/rodada"
        app:layout_constraintEnd_toEndOf="@id/rodada" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_button"
        style="@style/button"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:textSize="20sp"
        android:text="@string/start_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/stop_button"
        app:layout_constraintStart_toEndOf="@+id/btn_diminuirtime_a"
        app:layout_constraintTop_toBottomOf="@+id/timer_text_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/stop_button"
        style="@style/button"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:text="@string/stop_button"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/reset_button"
        app:layout_constraintStart_toEndOf="@id/start_button"
        app:layout_constraintTop_toBottomOf="@id/timer_text_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reset_button"
        style="@style/button"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:text="@string/reset_button"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_aumentartime_b"
        app:layout_constraintStart_toEndOf="@id/stop_button"
        app:layout_constraintTop_toBottomOf="@+id/timer_text_view" />

    <TextView
        android:id="@+id/tv_titulo_time_a"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_titulo_time_a"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/edt_time_a"
        app:layout_constraintStart_toStartOf="@id/tv_time_a_pontos"
        app:layout_constraintEnd_toEndOf="@id/tv_time_a_pontos" />

    <TextView
        android:id="@+id/tv_titulo_time_b"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_titulo_time_b"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/edt_time_b"
        app:layout_constraintStart_toStartOf="@id/tv_time_b_pontos"
        app:layout_constraintEnd_toEndOf="@id/tv_time_b_pontos" />

</androidx.constraintlayout.widget.ConstraintLayout>