<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    android:rotationX="-7"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/timea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_a_item_reciclerview"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/timeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/time_b_item_reciclerview"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/timea"
            app:layout_constraintStart_toEndOf="@id/timea"
            app:layout_constraintTop_toTopOf="@id/timea" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_versus_time"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/timea"
            app:layout_constraintEnd_toStartOf="@+id/timeb"
            app:layout_constraintStart_toEndOf="@+id/timea"
            app:layout_constraintTop_toTopOf="@id/timea" />

        <TextView
            android:id="@+id/time_a_pontos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_a_pontos_reciclerview"
            app:layout_constraintEnd_toEndOf="@+id/timea"
            app:layout_constraintStart_toStartOf="@+id/timea"
            app:layout_constraintTop_toBottomOf="@id/timea" />

        <TextView
            android:id="@+id/time_b_pontos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_b_pontos_reciclerview"
            app:layout_constraintEnd_toEndOf="@+id/timeb"
            app:layout_constraintStart_toStartOf="@+id/timeb"
            app:layout_constraintTop_toBottomOf="@id/timeb" />

        <TextView
            android:id="@+id/tempo_de_partida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:text="@string/timer_reciclerview"
            app:layout_constraintBottom_toBottomOf="@+id/timeb"
            app:layout_constraintStart_toStartOf="@+id/timeb"
            app:layout_constraintTop_toTopOf="@+id/timeb" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>