<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:background="@drawable/background_campo">

    <View
        android:id="@+id/containerLogin"
        style="@style/container"
        android:layout_width="match_parent"
        android:layout_height="520dp"
        android:layout_marginHorizontal="40dp"
        android:alpha="0.6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496" />

    <TextView
        android:id="@+id/tv_nome_de_usuario"
        style="@style/textview_itens"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/login_nome_usuario"
        app:layout_constraintBottom_toTopOf="@id/ed_username"
        app:layout_constraintStart_toStartOf="@+id/containerLogin"
        app:layout_constraintEnd_toEndOf="@+id/containerLogin" />

    <TextView
        android:id="@+id/tv_email"
        style="@style/textview_itens"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_email"
        app:layout_constraintBottom_toTopOf="@+id/ed_email"
        app:layout_constraintEnd_toEndOf="@id/ed_username"
        app:layout_constraintStart_toStartOf="@id/ed_username" />

    <EditText
        android:id="@+id/ed_username"
        style="@style/ediText"
        android:layout_width="240dp"
        android:inputType="text"
        android:maxLength="25"
        android:layout_height="50dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintStart_toStartOf="@+id/containerLogin"
        app:layout_constraintEnd_toEndOf="@+id/containerLogin"
        app:layout_constraintTop_toTopOf="@+id/containerLogin"
        app:layout_constraintBottom_toBottomOf="@+id/containerLogin"/>

    <EditText
        android:id="@+id/ed_email"
        style="@style/ediText"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:inputType="text"
        android:maxLength="25"
        app:layout_constraintBottom_toTopOf="@+id/ed_senha"
        app:layout_constraintEnd_toEndOf="@+id/containerLogin"
        app:layout_constraintStart_toStartOf="@+id/containerLogin"
        app:layout_constraintTop_toBottomOf="@+id/tv_ema" />
    <TextView
        android:id="@+id/tv_senha"
        style="@style/textview_itens"
        android:layout_width="240dp"
        android:maxLength="25"
        android:layout_height="wrap_content"
        android:text="@string/login_senha_usuario"
        app:layout_constraintStart_toStartOf="@+id/containerLogin"
        app:layout_constraintEnd_toEndOf="@+id/containerLogin"
        app:layout_constraintTop_toBottomOf="@id/ed_username" />

    <TextView
        android:id="@+id/tv_senha_2"
        style="@style/textview_itens"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:maxLength="25"
        android:text="@string/login_senha_usuario_2"
        app:layout_constraintEnd_toEndOf="@+id/containerLogin"
        app:layout_constraintStart_toStartOf="@+id/containerLogin"
        app:layout_constraintTop_toBottomOf="@+id/ed_senha" />
    <EditText
        android:id="@+id/ed_senha"
        style="@style/ediText"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:drawableRight="@drawable/ic_eye"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/containerLogin"
        app:layout_constraintStart_toStartOf="@+id/containerLogin"
        app:layout_constraintTop_toBottomOf="@id/tv_senha" />


    <EditText
        android:id="@+id/ed_senha_2"
        style="@style/ediText"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:drawableRight="@drawable/ic_eye"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/containerLogin"
        app:layout_constraintStart_toStartOf="@+id/containerLogin"
        app:layout_constraintTop_toBottomOf="@+id/tv_senha_2" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/execute_criar_conta"
        style="@style/button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/criar_conta_button"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/containerLogin"
        app:layout_constraintStart_toStartOf="@+id/containerLogin"
        app:layout_constraintTop_toBottomOf="@+id/ed_senha_2" />

    <Button
        android:id="@+id/hide_password"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/transparent"
        app:layout_constraintTop_toTopOf="@id/ed_senha"
        app:layout_constraintEnd_toEndOf="@+id/ed_senha"/>

    <TextView
        android:id="@+id/titulo_tela_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_criar_conta"
        android:textColor="@color/white"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_email"
        app:layout_constraintEnd_toEndOf="@+id/containerLogin"
        app:layout_constraintStart_toStartOf="@+id/containerLogin"
        app:layout_constraintTop_toTopOf="@+id/containerLogin"
        app:layout_constraintVertical_bias="0.15" />

</androidx.constraintlayout.widget.ConstraintLayout>